# evidenceappdesktop

./: .env  .gitignore  README.md  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/api/: client.ts
src/components/: Stepper.tsx
src/pages/: Developers.tsx  Mapping.tsx  Onboarding.tsx  Periods.tsx  Repos.tsx  Result.tsx  Upload.tsx
src/state/: store.test.ts  store.ts
