[package]
name = "evidenceappdesktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
which = "4.4"

[build-dependencies]
tauri-build = "2"

[dev-dependencies]
tempfile = "3"
